# odt2md

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
odt2md/: __init__.py  block.py  emphasis.py  odt2md.py  profile.py  show_styles.py  style.py  styler.py  util.py
odt2md/resources/: profile.py
odt2md/test/: test_block.py  test_escape.py  test_footnote.py  test_is_single_letter.py  test_split_into_lines.py  test_style.py  test_toc_mark.py
odt2md/test/resources/: 0701.odt  english_menaion.odt  footnote_test.odt  french_menaion.odt  output_test_sci.odt  prenikonian_apostol.odt  sergius_example1.odt  sergius_example2.odt
