[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[project]
name = "odt2md"
version = "0.1.5"
description = "Tools to convert LibreOffice document to Church-Slavonic Markdown flavor"

readme = "README.md"
requires-python = ">=3.8"
keywords = ["odt", "LibreOffice", "markdown"]
license = { text = "MIT" }
authors = [
    { name = "Mike Kroutikov", email = "pgmmpk@gmail.com" },
]
maintainers = [
    { name = "Mike Kroutikov", email = "pgmmpk@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Religion",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "regex",
    "lxml>4.9.1",
    "lxmlx",
]

[project.optional-dependencies]
dev = [
    "odt2md",
    "pytest",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/slavonic/odt2md/"
"Source" = "https://github.com/slavonic/odt2md"

[project.scripts]
odt2md = "odt2md.odt2md:main"
show_styles = "odt2md.show_styles:main"

[tool.setuptools]
packages = ["odt2md"]

[tool.setuptools.package-data]
odt2md = ["resources/profile.py"]
